[1.3.6-prepare][Improvement][Docker&K8s] Support set logger jvm options by LOGGER_SERVER_OPTS